fix a body tag in beef stew

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="../recipes/beef-stew.html">Vietnamese Beef Stew</a>
+    <a href="../recipes/oxtail-stew.html">Oxtail Stew</a>
   </body>
 </html>
