fix a missing body tag

--- a/recipes/beef-stew.html
+++ b/recipes/beef-stew.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vietnamese Beef Stew</title>
   </head>
+  <body>
     <h1>Vietnamese Beef Stew</h1>
     <img src="../images/beef-stew.jpg" alt="Image of a vietnamese beef stew" />
     <p>
@@ -25,41 +26,65 @@
     </p>
     <ul>
       INGREDIENTS
-    
-    <li>2 lb beef shank cut into 3/4</li>
-    <li>water</li>
-    <li>1 tbsp salt</li>
-    <li>2 tbsp soy sauce</li>
-    <li>2 tbsp hoisin sauce</li>
-    <li>2 tbsp salt</li>
-    <li>1 tps Vietnamese beef stew seasoning</li>
-    <li>2 tbsp neutral cooking oil</li>
-    <li>4 cloves garlic roughly chopped</li>
-    <li>1 tbsp Vietnamese beef stew seasoning</li>
-    <li>1 medium onion quartered</li>
-    <li>1.5 tbs fresh ginger sliced or pounded</li>
-    <li>1-2 stalks lemon grass use ~7" of the aromatic root area, pounded</li>
-    <li>2 tbsp tomato paste</li>
-    <li>2 tbsp dark soy sauce</li>
-    <li>3-4 pods star anise</li>
-    <li>4-5 bay leaves</li>
-    <li>1 can chicken broth about 2 cups</li>
-    <li>6 oz coconut soda, Coke, or Sprite</li>
-    <li>5 cups filtered water or enough to barely cover the ingredients</li>
-    <li>2-3 carrots cut into 1" chunks</li>
-    <li>6 12" Vietnamese bread loaves</li>
-    <li>2 sliced jalapenos</li>
-    <li>1 sliced lemon</li>
-    <li>salt and pepper</li>
-    <li>1 bunch Thai basil</li>
-</ul>
-<ol>INSTRUCTIONS
-    <li>Clean the meat. Add beef to a large pot and add 1 tbsp salt and enough tap water to barely cover the meat. Bring to a boil on high heat, and once it hits a boil for 30 seconds, kill the heat, drain, and rinse under running water to clean. If you haven't cut the meat into 3/4 – 1" pieces yet, do it now.</li>
-    <li>Marinate the meat. Add all marinade ingredients to the meat in a covered bowl or a bag for at least two hours, but overnight would be better.</li>
-    <li>Aromatics. Preheat a large pot on medium high. When hot, add the oil, let it warm a bit, then add all the garlic and stir to slowly saute until it turns light brown. Then add the paprika an stir until it releases its aroma, about 30 seconds.</li>
-    <li>Broth. Add all broth ingredients to the pot except the carrots. Turn the heat to high until it hits a boil, then reduce heat so it maintains a low boil. Cook until the meat is as tender as you'd like it, about 60-90 minutes. Add carrots towards the final 10 minutes so it softens. Discard the cooked onions and star anise pods.</li>
-    <li>Serve with accoutrement as shown: tearing fresh Thai basil onto your plate, taking occasional bites of jalapeno, and dipping a few pieces of meat into the salt / pepper / lemon juice side for variety.
-    </li>
-</ol>
+
+      <li>2 lb beef shank cut into 3/4</li>
+      <li>water</li>
+      <li>1 tbsp salt</li>
+      <li>2 tbsp soy sauce</li>
+      <li>2 tbsp hoisin sauce</li>
+      <li>2 tbsp salt</li>
+      <li>1 tps Vietnamese beef stew seasoning</li>
+      <li>2 tbsp neutral cooking oil</li>
+      <li>4 cloves garlic roughly chopped</li>
+      <li>1 tbsp Vietnamese beef stew seasoning</li>
+      <li>1 medium onion quartered</li>
+      <li>1.5 tbs fresh ginger sliced or pounded</li>
+      <li>1-2 stalks lemon grass use ~7" of the aromatic root area, pounded</li>
+      <li>2 tbsp tomato paste</li>
+      <li>2 tbsp dark soy sauce</li>
+      <li>3-4 pods star anise</li>
+      <li>4-5 bay leaves</li>
+      <li>1 can chicken broth about 2 cups</li>
+      <li>6 oz coconut soda, Coke, or Sprite</li>
+      <li>5 cups filtered water or enough to barely cover the ingredients</li>
+      <li>2-3 carrots cut into 1" chunks</li>
+      <li>6 12" Vietnamese bread loaves</li>
+      <li>2 sliced jalapenos</li>
+      <li>1 sliced lemon</li>
+      <li>salt and pepper</li>
+      <li>1 bunch Thai basil</li>
+    </ul>
+    <ol>
+      INSTRUCTIONS
+      <li>
+        Clean the meat. Add beef to a large pot and add 1 tbsp salt and enough
+        tap water to barely cover the meat. Bring to a boil on high heat, and
+        once it hits a boil for 30 seconds, kill the heat, drain, and rinse
+        under running water to clean. If you haven't cut the meat into 3/4 – 1"
+        pieces yet, do it now.
+      </li>
+      <li>
+        Marinate the meat. Add all marinade ingredients to the meat in a covered
+        bowl or a bag for at least two hours, but overnight would be better.
+      </li>
+      <li>
+        Aromatics. Preheat a large pot on medium high. When hot, add the oil,
+        let it warm a bit, then add all the garlic and stir to slowly saute
+        until it turns light brown. Then add the paprika an stir until it
+        releases its aroma, about 30 seconds.
+      </li>
+      <li>
+        Broth. Add all broth ingredients to the pot except the carrots. Turn the
+        heat to high until it hits a boil, then reduce heat so it maintains a
+        low boil. Cook until the meat is as tender as you'd like it, about 60-90
+        minutes. Add carrots towards the final 10 minutes so it softens. Discard
+        the cooked onions and star anise pods.
+      </li>
+      <li>
+        Serve with accoutrement as shown: tearing fresh Thai basil onto your
+        plate, taking occasional bites of jalapeno, and dipping a few pieces of
+        meat into the salt / pepper / lemon juice side for variety.
+      </li>
+    </ol>
   </body>
 </html>
