--- a/recipes/beef-stew.html
+++ b/recipes/beef-stew.html
@@ -25,7 +25,7 @@
       between bottomless icy coconut drinks and fountain sodas.
     </p>
     <ul>
-      INGREDIENTS
+      <h3>INGREDIENTS</h3>
 
       <li>2 lb beef shank cut into 3/4</li>
       <li>water</li>
@@ -55,7 +55,7 @@
       <li>1 bunch Thai basil</li>
     </ul>
     <ol>
-      INSTRUCTIONS
+      <h3>INSTRUCTIONS</h3>
       <li>
         Clean the meat. Add beef to a large pot and add 1 tbsp salt and enough
         tap water to barely cover the meat. Bring to a boil on high heat, and
