complete the page for fried rices

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="../recipes/beef-stew.html">Vietnamese Beef Stew</a>
     <a href="../recipes/oxtail-stew.html">Oxtail Stew</a>
+    <a href="../recipes/fried-rice.html">Fried Rice</a>
   </body>
 </html>
